...
      .toolbar {
        ToolbarItem(placement: .navigationBarTrailing) {
          ImageButton(systemName: "plus.circle") {
            isShowingDetail = true
            path.append(ShoppingListDestination.buildYourMeal)
          }
          .accessibilityIdentifier("Add")
        }
      }
      .navigationDestination(for: ShoppingListDestination.self) { destination in
        Group {
          switch destination {
          case .buildYourMeal:
...
